updated training set function

--- a/scratch_svm.ipynb
+++ b/scratch_svm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,30 +14,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Support_Vector_Machine:\n",
     "    def _init_(self, visualization = True):\n",
     "        self.visualization = visualization\n",
-    "        self.colors = {-1 = 'r', 1 = 'b'}\n",
+    "        self.colors = {-1 : 'r', 1 : 'b'}\n",
     "        if self.visualization:\n",
     "            self.fig = plt.figure()\n",
     "            self.ax = self.fig.add_subplot(1,1,1)\n",
     "            \n",
     "    # training set        \n",
     "    def fit(self, data):\n",
-    "        pass\n",
+    "        # {||w||: [w,b]}\n",
+    "        opt_dict = {}\n",
+    "        transforms = [[1,1], [-1, 1], [-1, -1], [1, -1]]\n",
+    "        all_data = []\n",
+    "        for yi in self.data:\n",
+    "            for featureset in self.data[yi]:\n",
+    "                for feature in featureset:\n",
+    "                    all_data.append(feature)\n",
+    "        self.max_feature_value = max(all_data)\n",
+    "        self.min_feature_value = min(all_data)\n",
+    "        all_data = None\n",
+    "        \n",
+    "        step_sizes = [self.max_feature_value * 0.1,\n",
+    "                      self.max_feature_value * 0.01\n",
+    "                     #point of expense\n",
+    "                     self.max_feature_value * 0.001\n",
+    "                     ]\n",
+    "        \n",
+    "        # extremely expensive\n",
+    "        b_range_multiple = 5\n",
+    "        b_multiple = 5\n",
+    "        latest_optimum = self.max_feature_value * 10\n",
+    "        \n",
+    "        for step in step_sizes:\n",
+    "            w = np.array([latest_optimum,latest_optimum])\n",
+    "            optimized = False\n",
+    "            while not optimized:\n",
+    "                pass\n",
     "    \n",
     "    def predict(self, features):\n",
+    "        # sign(x.w + b)\n",
     "        classification = np.sign(np.dot(np.array(features), self.w) + self.b)\n",
     "        return classification"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
