--- a/scratch_svm.ipynb
+++ b/scratch_svm.ipynb
@@ -55,7 +55,33 @@
     "            w = np.array([latest_optimum,latest_optimum])\n",
     "            optimized = False\n",
     "            while not optimized:\n",
-    "                pass\n",
+    "                for b in arange(-1 * (self.max_feature_value * b_range_multiple), \n",
+    "                                self.max_feature_value * b_range_multiple, \n",
+    "                                step * b_multiple):\n",
+    "                    for transformation in transforms:\n",
+    "                        w_t = w * transformation\n",
+    "                        found_option = True\n",
+    "                        # weakest link in SVM fundamentally\n",
+    "                        # yi(xi. w + b) >= 1\n",
+    "                        for i in self.data:\n",
+    "                            for xi in self.data[i]:\n",
+    "                                yi = i\n",
+    "                                if not yi*(np.dot(w_t, xi) + b ) >= 1:\n",
+    "                                    found_option = False\n",
+    "                        if found_option:\n",
+    "                            opt_dict[np.linalg.norm(w_t)] = [w_t, b]\n",
+    "                if w[0] < 0:\n",
+    "                    optimized = True\n",
+    "                    print('Optimized a step')\n",
+    "                else: \n",
+    "                    w = w - step \n",
+    "        norms =  sorted([n for n in opt_dict])\n",
+    "        # ||w|| : [w,b]\n",
+    "        opt_choice = opt_dict[norms[0]]\n",
+    "        self.w = opt_choice[0]\n",
+    "        self.b = opt_choice[1]\n",
+    "        latest_optimum = opt_choice(0)(0) + step * 2\n",
+    "                                    \n",
     "    \n",
     "    def predict(self, features):\n",
     "        # sign(x.w + b)\n",
